# sa-surface-2d

./: .gitignore  Auxiliares.cpp  Auxiliares.hpp  CMakeLists.txt  Geometry.cpp  Geometry.hpp  Interfacer.cpp  Interfacer.hpp  Makefile  Optimizer.cpp  Optimizer.hpp  README.md  Renderer.cpp  Renderer.hpp  Surface2D 2.0.cpp  SurfaceDecoder.cpp  SurfaceDecoder.hpp  SurfaceGenome.cpp  SurfaceGenome.hpp  a.out  defs.h  input.txt  output.txt  output_t.txt  target
Outsiders/: freetype.cpp  freetype.hpp
Outsiders/brkga/: BRKGA.h  Population.h  samplecode.cpp
Surface/: input.txt  main.cpp  prettyprint.hpp
Surface.xcodeproj/: project.pbxproj
Surface.xcodeproj/xcuserdata/amurices.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Surface.xcodeproj/xcuserdata/amurices.xcuserdatad/xcschemes/: Surface.xcscheme  xcschememanagement.plist
Surface2D 2.0/: Surface2D 2.0.sln
Surface2D 2.0/Debug/: Surface2D 2.0.ilk
Surface2D 2.0/Surface2D 2.0/: Geometry.cxx  Geometry.h  Makefile  MathGeometry.cxx  MathGeometry.h  Optimizer.cxx  Optimizer.h  Surface2D 2.0.cpp  Surface2D 2.0.vcxproj  Surface2D 2.0.vcxproj.filters  ThickSurface.cxx  ThickSurface.h  Util.cpp  Util.h  _2DSurface.cxx  _2DSurface.h  defs.h  stdafx.cpp
Surface2D 2.0/Surface2D 2.0/Debug/: Surface2D 2.0.pch  vc141.idb
Surface2D 2.0/Surface2D 2.0/Debug/Surface2D 2.0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Surface2D 2.0.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SurfaceGenome bkup/: SurfaceGenome.cpp  SurfaceGenome.hpp
brkga/: BRKGA.h
inTest/: matlab.mat
include/: Geometry.h  GlobalState.hpp  GraphEffects.hpp  GraphSurface.hpp  IO.hpp  MathGeometry.h  MathGeometry.hpp  Optimizer.h  Optimizer.hpp  Optimizer2.hpp  Renderer.hpp  Renderer.hxx  SurfaceProperties.hpp  ThickSurface.h  ThickSurface.hpp  Util.h  Util.hpp  _2DSurface.h  _2DSurface.hpp  defs.hpp
include/legacy/: Optimizer.hpp  defs.hpp
sa-surface-2d-master/: Auxiliares.cpp  Auxiliares.hpp  Geometry.hpp  Interfacer.hpp  Optimizer.cpp  Optimizer.hpp  Renderer.cpp  Renderer.hpp  Surface2D.sln  Surface2D.vcxproj  Surface2D.vcxproj.filters  SurfaceDecoder.hpp  defs.h  times.cpp
sa-surface-2d-master/Debug/: vc141.idb
sa-surface-2d-master/Debug/Surface2D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Surface2D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
sa-surface-2d-master/Outsiders/: prettyprint.hpp
sa-surface-2d-master/Outsiders/brkga/: BRKGA.h  omp.h
sa-surface-2d-master/Surface/: main.cpp
sa-surface-2d-master/Surface.xcodeproj/: project.pbxproj
sa-surface-2d-master/Surface.xcodeproj/xcuserdata/amurices.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
sa-surface-2d-master/Surface.xcodeproj/xcuserdata/amurices.xcuserdatad/xcschemes/: Linux.xcscheme  xcschememanagement.plist
sa-surface-2d-master/sys/: times.h
sad/: sa-runner.go
sad/surface/: sadfile.go
src/: Geometry.cxx  GlobalState.cpp  GraphEffects.cpp  GraphSurface.cpp  IO.cpp  MathGeometry.cpp  MathGeometry.cxx  NanoguiRenderer.cpp  Optimizer.cpp  Optimizer.cxx  Optimizer2.cpp  Playground.cpp  Renderer.cpp  Renderer.cxx  SurfaceProperties.cpp  ThickSurface.cpp  ThickSurface.cxx  Util.cpp  _2DSurface.cpp  _2DSurface.cxx  main.cpp
src/legacy/: Optimizer.cpp  ThickSurface.cpp
